--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #0080ff;
+    background-color: #2c6975;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h2 {
     display: grid;
     grid-gap: 60px;
     grid-template-columns: auto auto auto auto;
-    background-color: #ff9600;
+    background-color: #e0ecde;
     padding: 10px;
 }
 
@@ -26,4 +26,63 @@ h2 {
     padding: 20px;
     font-size: 30px;
     text-align: center;
+}
+
+.inactive {
+    background-color: #525455;
+}
+
+.form-content {
+    position: relative;
+    background-color: chartreuse;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animetop;
+    animation-duration: 0.4s
+}
+
+@keyframes animetop {
+    from    {top: -300px; opacity: 0}
+    to      {top: 0; opacity: 1}
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
   }
